--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "mongodb": "^3.1.4",
     "mongoose": "^5.2.13",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "q": "^1.5.1"
   }
 }
