--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "~1.4.3",
@@ -15,11 +15,12 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
-    "mongodb": "^3.1.4",
-    "mongoose": "^5.2.13",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "q": "^1.5.1"
